@@ -29,7 +29,6 @@ echoJob::echoJob(const char *buf, int len, OutputJob *_output)
    : output(_output)
 {
    AddWaiting(_output);
-   output->SetParentFg(this);
    output->Put(buf, len);
    output->PutEOF();
 }
@@ -38,7 +37,6 @@ echoJob::echoJob(const char *buf, OutputJob *_output)
    : output(_output)
 {
    AddWaiting(_output);
-   output->SetParentFg(this);
    output->Put(buf);
    output->PutEOF();
 }
